# QtDataBrowser

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
cmake/: QtDataBrowserConfig.cmake.in
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  QDataBrowser  abstractdatastore.h  dataslice.cpp  dataslice.h  qdatabrowser.cpp  qdatabrowser.h  qdatasliceselector.cpp  qdatasliceselector.h  qdataview.cpp  qdataview.h  qtdatabrowser.qrc  qtdatabrowser_resources.qrc
